# personalnanobot

./: .gitignore  PROGRESS.md  README.md  SECURITY.md  check.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  start-all.cmd  start-all.ps1  stop-all.cmd  stop-all.ps1  vitest.config.js
.github/workflows/: ci.yml
docs/: DEPLOYMENT_CLUSTER.md
docs/frontend/: GEMINI_FRONTEND_BRIEF.md
docs/interview/: DEMO_SCRIPT.md  DEPLOYMENT_STORY.md  KNOWN_ISSUES.md  SYSTEM_DESIGN.md
docs/rag/: ASSISTANT_RAG_CATALOG.md  MILVUS_RAG_DEMO_GUIDE.md  assistant_rag_sources.json  demo_Chinese_food.md  demo_personal_life_account_knowledge.md  demo_programmer_language.md  demo_shanghai_trip.md
evals/: README.md  rag_quality_runner.py  runner.py
evals/datasets/: basic_eval_cases.jsonl  professional_rag_demo_cases.jsonl  rag_quality_eval_cases.jsonl
evals/reports/: basic_eval_report.json  basic_eval_report.md  professional_rag_demo_report.json  rag_quality_report.json
nanobot/agent/: context.py  loop.py  memory.py  runner.py  skills.py  subagent.py
nanobot/agent/tools/: filesystem.py  local_paths.py  message.py  search.py  shell.py
nanobot/api/: server.py
nanobot/channels/: manager.py  qq.py  weixin.py
nanobot/cli/: agent_commands.py  api_commands.py  channel_commands.py  cluster_commands.py  commands.py  gateway_commands.py  onboard_commands.py  plugin_commands.py  runtime_helpers.py  status_commands.py
nanobot/cluster/: __init__.py  collaboration.py  control.py  inbound_router.py  mcp.py  metrics.py  rag.py  runtime.py  security.py  service.py  storage.py  task_runner.py  tools.py  uploads.py  webapp.py
nanobot/config/: schema.py
nanobot/providers/: openai_compat_provider.py
nanobot/skills/: README.md
nanobot/skills/clawhub/: SKILL.md
nanobot/skills/cron/: SKILL.md
nanobot/skills/github/: SKILL.md
nanobot/skills/memory/: SKILL.md
nanobot/skills/skill-creator/: SKILL.md
nanobot/skills/summarize/: SKILL.md
nanobot/skills/tmux/: SKILL.md
nanobot/skills/weather/: SKILL.md
nanobot/utils/: helpers.py
tests/: test_openai_api.py
tests/channels/: test_qq_ack_message.py  test_weixin_channel.py  test_weixin_recovery.py
tests/cluster/: test_assistant_tools.py  test_channel_delivery.py  test_cluster_runtime.py  test_cluster_service.py  test_control_store.py  test_rag_catalog.py  test_rag_quality.py  test_sqlite_storage.py  test_webapp_api.py
tests/frontend/: mock-console-server.mjs
tests/frontend/e2e/: console.spec.js
tests/tools/: test_exec_security.py  test_filesystem_tools.py  test_message_tool.py
tests/utils/: test_response_formatting.py
web/: app.js  index.html  interview_pack.json  react-console.css  react-console.js  resizable-layout.css  resizable-layout.js  styles.css
web/react-src/: main.jsx  main.test.jsx
